fixes form text alignment issue in calls to actions

--- a/dev/scss/components/_call-to-action.scss
+++ b/dev/scss/components/_call-to-action.scss
@@ -12,4 +12,8 @@
   .read-more {
     text-align: center;
   }
+
+  form div {
+    text-align: left;
+  }
 }
